--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,49 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
 @charset "UTF-8";
+.register {
+  margin-top: 30px;
+}
+.register .register-link {
+  margin-left: 8px;
+}
+
+.login-link {
+  margin-left: 8px;
+}
+
+.book-container {
+  margin-top: 8px;
+}
+.book-container .book-image {
+  height: 290px;
+  border-radius: 3px;
+}
+.book-container .book-title {
+  margin-top: 12px;
+  text-transform: capitalize;
+}
+.book-container .book-author {
+  text-transform: capitalize;
+}
+
+.book-review .single-book-title {
+  text-transform: capitalize;
+}
+.book-review .single-book-authors {
+  text-transform: capitalize;
+}
+.book-review .single-book-description {
+  margin-top: 50px;
+}
+.book-review .book-review-image {
+  border-radius: 3px;
+  height: 550px;
+}
+
+.hidden-comment-form {
+  display: none;
+}
+
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
