--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,13 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
 @charset "UTF-8";
+ul {
+  padding-left: 0px;
+  list-style: none;
+}
+ul li {
+  display: inline-block;
+}
+
 .register {
   margin-top: 30px;
 }
@@ -26,6 +34,10 @@
   text-transform: capitalize;
 }
 
+.book-review .book-review-image {
+  border-radius: 3px;
+  height: 550px;
+}
 .book-review .single-book-title {
   text-transform: capitalize;
 }
@@ -34,10 +46,6 @@
 }
 .book-review .single-book-description {
   margin-top: 50px;
-}
-.book-review .book-review-image {
-  border-radius: 3px;
-  height: 550px;
 }
 
 .hidden-comment-form {
