--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -1,3 +1,11 @@
+ul {
+    padding-left: 0px;
+    list-style: none;
+    li {
+        display: inline-block;
+    }
+}
+
 .register {
     margin-top: 30px;
     .register-link {
