show books list related to user in users homepage

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -52,6 +52,18 @@ ul li {
   display: none;
 }
 
+.user-book-image {
+  height: 150px;
+}
+
+.user-books-authors-list {
+  display: block;
+}
+
+.user-books-genres-list {
+  display: block;
+}
+
 /*!
  * Bootstrap v4.6.0 (https://getbootstrap.com/)
  * Copyright 2011-2021 The Bootstrap Authors
