--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -52,3 +52,15 @@ ul {
     display: none;
 }
 
+.user-book-image {
+    height: 150px;
+}
+
+.user-books-authors-list {
+    display: block;
+}
+
+.user-books-genres-list {
+    display: block;
+}
+
