made seeders for database

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -71,18 +71,13 @@ ul li {
 
 .new-product {
   position: absolute;
-  z-index: 15;
-  margin-top: 1vh;
+  font-size: 1.7em;
 }
 
 .discount {
   position: absolute;
-  margin-top: 1vh;
+  font-size: 1.5em;
   margin-left: 14vh;
-}
-
-.approved-book-message {
-  color: green;
 }
 
 /*!
