--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -71,12 +71,11 @@ ul {
 
 .new-product {
     position: absolute;
-    z-index: 15;
-    margin-top: 1vh;
+    font-size: 1.7em;
 }
 
 .discount {
     position: absolute;
-    margin-top: 1vh;
+    font-size: 1.5em;
     margin-left: 14vh;
 }
