--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -69,6 +69,12 @@ ul {
     display: block;
 }
 
+.book-old-price {
+    b {
+        text-decoration: line-through;
+    }
+}
+
 .new-product {
     position: absolute;
     font-size: 1.7em;
@@ -78,4 +84,9 @@ ul {
     position: absolute;
     font-size: 1.5em;
     margin-left: 14vh;
+}
+
+.create-user-form-container {
+    margin: auto;
+    width: 75%;
 }
