--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -88,5 +88,70 @@ ul {
 
 .create-user-form-container {
     margin: auto;
+    padding: 25px;
     width: 75%;
+}
+
+
+// Rating stars 
+div.stars {
+    // width: 250px;
+    display: inline-block;
+}
+
+// .mt-200 {
+//     margin-top: 200px
+// }
+
+input.star {
+    display: none;
+}
+
+label.star {
+    float: right;
+    padding: 3px;
+    font-size: 26px;
+    color: #4A148C;
+    transition: all .2s;
+}
+
+input.star:checked~label.star:before {
+    content: '\f005';
+    color: #FD4;
+    transition: all .25s;
+}
+
+input.star-5:checked~label.star:before {
+    color: #FE7;
+    text-shadow: 0 0 20px #952;
+}
+
+input.star-1:checked~label.star:before {
+    color: #F62;
+}
+
+label.star:hover {
+    transform: rotate(-15deg) scale(1.3);
+}
+
+label.star:before {
+    content: '\f006';
+    font-family: FontAwesome;
+}
+// End rating Stars
+
+
+
+.custom-submit-button {
+    width: 30%;
+}
+
+.rating-star-color {
+    // color: #f9c74f;
+    color: #FD4;
+}
+
+.empty-rating-star {
+    // color: #5e6472;
+    color: #4A148C;
 }
