--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,3 +9,6 @@
 
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
+
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/regular';
