--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -155,3 +155,12 @@ label.star:before {
     // color: #5e6472;
     color: #4A148C;
 }
+
+.book-average-rating {
+    position: absolute;
+    right: 0;
+}
+
+.star-resize {
+    font-size: 25px;
+}
