--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -156,3 +156,9 @@ label.star:before {
 .star-resize {
     font-size: 25px;
 }
+
+.book-report-link {
+    position: absolute;
+    right: 0;
+    color: black
+}
